# gQuery

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  test_build.yml
core/: fwd.py
demo/: bvh_visualization_2d.py  closest_point_demo_2d.py  closest_point_demo_3d.py  closest_silhouette_demo_2d.py  closest_silhouette_demo_3d.py  mesh_viewer.py  polyline_viewer.py  ray_intersect_demo_2d.py  ray_intersect_demo_3d.py  visualizer.py
examples/: README.md  bvh_visualization_2d.py  bvh_visualization_2d_README.md  closest_point_demo.py  closest_point_demo_3d.py  closest_silhouette_demo.py  closest_silhouette_demo_3d.py  example_2d.py  example_3d.py  polyline_intersect_2d.py  ray_intersect_demo.py  ray_intersect_demo_3d.py
gquery/: __init__.py  gquery_ext.pyi
gquery/core/: fwd.py  math.py
gquery/shapes/: bvh.py  bvh3d.py  line_segment.py  mesh.py  polyline.py  primitive.py  silhouette_edge.py  silhouette_vertex.py  snch.py  snch3d.py  triangle.py
gquery/util/: obj_loader.py
include/core/: bounding_box.h  bounding_cone.h  bounding_sphere.h  bvh.h  check.h  fwd.h  log.h  parallel.h  snch.h
include/primitives/: line_segment.h  primitive.h  triangle.h
include/python/: python.h
include/shapes/: bounding_box.h  bounding_cone.h  bounding_sphere.h  bvh.h  line_segment.h  primitive.h  silhouette_edge.h  silhouette_vertex.h  snch.h  triangle.h
include/util/: check.h  log.h  print.h  span.h
shapes/: bvh.py  line_segment.py  mesh.py  primitive.py  snch.py  triangle.py
src/: gquery.cpp
src/core/: bvh.cpp  parallel.cpp
src/gquery/: __init__.py
src/shapes/: bvh.cpp  mesh.cpp  silhouette_edge.cpp  snch.cpp
src/tests/: test_parallel.cpp  test_template.cpp
src/util/: check.cpp  log.cpp  print.cpp
tests/: test_bvh.py  test_gquery.py
